--- a/DreamHome-Project/package.json
+++ b/DreamHome-Project/package.json
@@ -19,6 +19,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.0",
     "react-dom": "^18.2.0",
+    "react-elastic-carousel": "^0.11.5",
     "react-fontawesome": "^1.7.1",
     "react-router-dom": "^6.16.0",
     "sort-by": "^1.2.0"
