--- a/DreamHome-Project/package.json
+++ b/DreamHome-Project/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^18.2.0",
     "react-fontawesome": "^1.7.1",
     "react-router-dom": "^6.16.0",
+    "react-scroll": "^1.9.0",
     "sort-by": "^0.0.2"
   },
   "devDependencies": {
