--- a/DreamHome-Project/package.json
+++ b/DreamHome-Project/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "bootstrap": "^5.3.2",
+    "get-youtube-id": "^1.0.1",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
@@ -22,6 +23,7 @@
     "react-fontawesome": "^1.7.1",
     "react-router-dom": "^6.16.0",
     "react-scroll": "^1.9.0",
+    "react-youtube": "^10.1.0",
     "sort-by": "^0.0.2"
   },
   "devDependencies": {
