--- a/DreamHome-Project/package.json
+++ b/DreamHome-Project/package.json
@@ -13,8 +13,8 @@
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "axios": "^1.5.1",
     "bootstrap": "^5.3.2",
-    "get-youtube-id": "^1.0.1",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
