--- a/DreamHome-Project/package.json
+++ b/DreamHome-Project/package.json
@@ -24,6 +24,7 @@
     "react-lazy-load": "^4.0.1",
     "react-router-dom": "^6.16.0",
     "react-scroll": "^1.9.0",
+    "react-share": "^4.4.1",
     "react-youtube": "^10.1.0",
     "sort-by": "^0.0.2"
   },
